# OpenClawEffect

./: .gitignore  README.md  ROOT_TEST.txt  SPECIFICATION.md  mint_key.json  progress_summary.md  settings.json  treasury_key.json
bots/: .env  .env.example  auth_manager.js  manager.js  package-lock.json  package.json  play.js  test_single_push.cjs
bots/keys/: bot_1.json  bot_10.json  bot_2.json  bot_3.json  bot_4.json  bot_5.json  bot_6.json  bot_7.json  bot_8.json  bot_9.json
liquidity-manager/: .env  settings.json
liquidity-manager-test-swap/: .env  .env.test  Cargo.toml  settings.json
liquidity-manager-test-swap/src/: execution.rs  main.rs  monitor.rs  pumpswap_interface.rs  raydium_interface.rs
liquidity-manager/src/: execution.rs  main.rs  monitor.rs  pump_interface.rs  strategy.rs
program/: Anchor.toml  Cargo.toml
program/programs/snowball/: Cargo.toml
program/tests/: simulation.ts
programs/snowball/: Cargo.toml
scripts/: check_bots_balance.cjs  distribute_snow_mainnet.cjs
web/: check_program.js  jest.config.js  next.config.ts  package-lock.json  package.json  supabase_schema.sql  tsconfig.json
web/public/: STATUS.html  index.html  verify.txt
web/scripts/: check_supabase.cjs  convert_key.js  create_test_token.js  deep_scan_treasury.cjs  diagnose_mint.js  diagnose_verify_new.js  find_curve.js  find_rich_bot.js  find_treasury_tokens.cjs  fix_treasury_ata.cjs  force_swap.js  force_timer_update.cjs  fund_all_bots.js  payout_manager.js  send_snow.js  sync_blockchain_balance.cjs  test_conn.js  test_mainnet_rpc.js  test_push.js
(+40 files in other folders)
