[package]
name = "liquidity-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-client = "1.18"
solana-sdk = "1.18"
solana-account-decoder = "1.18" # Added for UiAccount
anchor-client = "0.29.0"
anchor-lang = "0.29.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
dotenv = "0.15"
borsh = "0.10" # Pump uses Borsh
sha2 = "0.10"
bs58 = "0.5"
spl-token = "4.0"
spl-associated-token-account = "2.2"