[package]
name = "snowball"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "snowball"

[features]
no-entrypoint = []
no-idl = []
no-log-messages = []
cpi = ["anchor-lang/cpi"]
default = []

[dependencies]
anchor-lang = { version = "0.30.0", features = ["derive"] }
anchor-spl = { version = "0.30.0" }
